objects/BCShipment__x.object
<CustomObject>
    <description>BCShipment</description>
    <externalDataSource>BCShipment</externalDataSource>
    <externalName>BCShipment</externalName>
    <fields>
        <fullName>ContractId__c</fullName>
        <externalDeveloperName>contract</externalDeveloperName>
        <label>Contract</label>
        <length>18</length>
        <referenceTargetField>Contract.BCContractId__c</referenceTargetField>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>BCShipment</relationshipLabel>
        <relationshipName>BCShipment</relationshipName>
        <type>IndirectLookup</type>
    </fields>
    <fields>
        <fullName>class__c</fullName>
        <description>class</description>
        <externalDeveloperName>class</externalDeveloperName>
        <label>class</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>contract__c</fullName>
        <externalDeveloperName>contract</externalDeveloperName>
        <label>contract</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>createdDate__c</fullName>
        <description>createdDate</description>
        <externalDeveloperName>createdDate</externalDeveloperName>
        <label>createdDate</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>description__c</fullName>
        <description>description</description>
        <externalDeveloperName>description</externalDeveloperName>
        <label>description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>modifiedDate__c</fullName>
        <description>modifiedDate</description>
        <externalDeveloperName>modifiedDate</externalDeveloperName>
        <label>modifiedDate</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>selfLink__c</fullName>
        <description>selfLink</description>
        <externalDeveloperName>selfLink</externalDeveloperName>
        <label>selfLink</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>shipmentId__c</fullName>
        <description>shipmentId</description>
        <externalDeveloperName>shipmentId</externalDeveloperName>
        <label>shipmentId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>status__c</fullName>
        <description>status</description>
        <externalDeveloperName>status</externalDeveloperName>
        <label>status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>type__c</fullName>
        <description>type</description>
        <externalDeveloperName>type</externalDeveloperName>
        <label>type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>unitCount__c</fullName>
        <description>unitCount</description>
        <externalDeveloperName>unitCount</externalDeveloperName>
        <label>unitCount</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>BCShipment</label>
    <listViews>
        <fullName>All</fullName>
        <columns>shipmentId__c</columns>
        <columns>contract__c</columns>
        <columns>status__c</columns>
        <columns>type__c</columns>
        <columns>unitCount__c</columns>
        <columns>class__c</columns>
        <columns>Id</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Apples</fullName>
        <columns>shipmentId__c</columns>
        <columns>status__c</columns>
        <columns>type__c</columns>
        <columns>unitCount__c</columns>
        <columns>class__c</columns>
        <columns>Id</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>type__c</field>
            <operation>equals</operation>
            <value>Apples</value>
        </filters>
        <label>Apples</label>
    </listViews>
    <listViews>
        <fullName>Bananas</fullName>
        <columns>shipmentId__c</columns>
        <columns>status__c</columns>
        <columns>type__c</columns>
        <columns>unitCount__c</columns>
        <columns>class__c</columns>
        <columns>Id</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>type__c</field>
            <operation>equals</operation>
            <value>BANANAS</value>
        </filters>
        <label>Bananas</label>
    </listViews>
    <pluralLabel>BCShipment</pluralLabel>
</CustomObject>